--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 /shelf/
 /lib/
 .idea/
-/workspace.xml
+/.idea/workspace.xml
 # Editor-based HTTP Client requests
 /httpRequests/
 # Datasource local storage ignored files
